tests/ui/parse/unclosed_brace.rx
//@ spec: RXS-0030
fn f() { //~ ERROR RX0009
    let a = 1;
